data/forge_javadoc/1.9.4/processed/net_minecraft_world_gen_structure_template_PlacementSettings.md
# PlacementSettings

## Class signature

```java
public class PlacementSettings extends java.lang.Object
```

## Constructors

- `public PlacementSettings()`
- `public PlacementSettings( Mirror mirrorIn, Rotation rotationIn, boolean ignoreEntitiesIn, @Nullable Block replacedBlockIn, @Nullable StructureBoundingBox boundingBoxIn)`

## Methods

- `public PlacementSettings copy()`
- `public PlacementSettings setMirror( Mirror mirrorIn)`
- `public PlacementSettings setRotation( Rotation rotationIn)`
- `public PlacementSettings setIgnoreEntities(boolean ignoreEntitiesIn)`
- `public PlacementSettings setReplacedBlock( Block replacedBlockIn)`
- `public PlacementSettings setChunk( ChunkPos chunkPosIn)`
- `public PlacementSettings setBoundingBox( StructureBoundingBox boundingBoxIn)`
- `public Mirror getMirror()`
- `public PlacementSettings setIgnoreStructureBlock(boolean ignoreStructureBlockIn)`
- `public Rotation getRotation()`
- `public boolean getIgnoreEntities()`
- `public Block getReplacedBlock()`
- `@Nullable public StructureBoundingBox getBoundingBox()`
- `public boolean getIgnoreStructureBlock()`