data/forge_javadoc/1.10.2/processed/net_minecraft_world_gen_structure_template_PlacementSettings.md
# PlacementSettings

## Class signature

```java
public class PlacementSettings extends java.lang.Object
```

## Constructors

- `public PlacementSettings()`

## Methods

- `public PlacementSettings copy()`
- `public PlacementSettings setMirror( Mirror mirrorIn)`
- `public PlacementSettings setRotation( Rotation rotationIn)`
- `public PlacementSettings setIgnoreEntities(boolean ignoreEntitiesIn)`
- `public PlacementSettings setReplacedBlock( Block replacedBlockIn)`
- `public PlacementSettings setChunk( ChunkPos chunkPosIn)`
- `public PlacementSettings setBoundingBox( StructureBoundingBox boundingBoxIn)`
- `public PlacementSettings setSeed(@Nullable java.lang.Long p_189949_1_)`
- `public PlacementSettings setRandom(@Nullable java.util.Random p_189950_1_)`
- `public PlacementSettings setIntegrity(float p_189946_1_)`
- `public Mirror getMirror()`
- `public PlacementSettings setIgnoreStructureBlock(boolean ignoreStructureBlockIn)`
- `public Rotation getRotation()`
- `public java.util.Random getRandom(@Nullable BlockPos p_189947_1_)`
- `public float getIntegrity()`
- `public boolean getIgnoreEntities()`
- `@Nullable public Block getReplacedBlock()`
- `@Nullable public StructureBoundingBox getBoundingBox()`
- `public boolean getIgnoreStructureBlock()`